name:                brick-todo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilparikh/brick-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Parikh
maintainer:          parikh.neil@me.com
copyright:           (C) 2017 Neil Parikh
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brick-todo
  ghc-options: -Wall -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       NonEmptyZipper,
                       Zipper
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       brick,
                       microlens,
                       generic-lens,
                       vty,
                       vector,
                       text-zipper,
                       cereal
